v2.6.2 - update maven plugins, make various things more robust to parallel tests, misc fixes